[package]
name = "imgur-downloader"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3"
# TODO: Move to crates.io version once tokio 1.0 has been released.
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", rev = "1f425a0244bcd7b4565dceb9076450d951f2ec03", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt"] }
tokio-util = { version = "0.6", features = ["io"] }
