[package]
name = "imgur-downloader"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18", features = ["fs", "io-util", "rt"] }
tokio-util = { version = "0.7", features = ["io"] }
